<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main activity -->
    <string name="app_name">BLE SensorTag</string>
    <string name="button_scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="title_device_list">Device List</string>
    <string name="device">Device</string>
    <string name="header">Available BLE Devices</string>
    <string name="disconnected">Device is not connected</string>
    <string name="control">Done</string>
    <string name="bt_not_supported">Bluetooth is not supported</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bt_on">Bluetooth was turned  on</string>
    <string name="bt_not_on">Bluetooth was not turned on</string>
    <string name="app_closing">Exiting BLE SensorTag app</string>
    <string-array name="device_filter"><item>SensorTag</item><item>SensorTag2</item><item>CC2650 SensorTag</item></string-array>    
    <string name="nodevice">There are no SensorTags advertising within range. Please push the side button on the SensorTag to start advertising.</string>
    <string name="scan_advice">The Android device is not scanning. Please tap \'Scan\' to scan for SensorTags.</string>
    <string name="bt_adapter_disable">Disable Bluetooth adapter</string>
    <string name="bt_adapter_reset">Reset Bluetooth adapter</string>
    
    <!-- Options menu -->
    <string name="prefs">Preferences</string>
    <string name="progress"></string>
    <string name="agree">I agree</string>
    <string name="fwupdate">Firmware update</string>
    <string name="bt">Bluetooth Adapter</string>
    <string name="sthome">SensorTag Home</string>
    <string name="tie2e">TI E2E Community</string>
    <string name="license">License</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!-- Device activity -->
    <string name="dev_addr">Device address</string>
    <string name="image">Image</string>
    
    <!-- Sensor names-->
    <string name="keys">Keys</string>
    <string name="acc">Accelerometer</string>
    <string name="mag">Magnetometer</string>
    <string name="lux">Luxometer</string>
    <string name="gyro">Gyroscope</string>
    <string name="hum">Humidity</string>
    <string name="bar">Barometer</string>
    <string name="tAmb">Ambience Temperature</string>
    <string name="tObj">Object Temperature</string>
    
    <!-- Sensor misc. -->
    <string name="xyz3">x:\ny:\nz:\n</string>
    <string name="empty3">*\n*\n*\n</string>
    <string name="unitDegSec3">deg/s\ndeg/s\ndeg/s\n</string>
    <string name="unitG3">g\ng\ng\n</string>
    <string name="unitT3">uT\nuT\nuT\n</string>
    
    <string name="empty1">*\n</string>
    <string name="unitDeg">deg/C\n</string>
    <string name="unitRH">%rH\n</string>
    <string name="unitPA_Meter">nPA\nmeter</string>
    <string name="unitLux">Lux\n</string>
    
    <!-- FWUpdate activity -->
    <string name="title_oad">Firmware Update (OAD)</string>
    <string name="start_prog">Start Programming</string>
    <string name="cancel">Cancel</string>
    <string name="prog_ogoing">NB! Not permitted to close this view during OAD transfer</string>
    <string name="load_image_a">Image A</string>
    <string name="load_image_b">Image B</string>
    <string name="load_image_c">Custom</string>
    <string name="no_image">Not an OAD image</string>
    <string name="no_image_sel">No image selected</string>
    <string name="new_image">Update image:</string>
    <string name="cur_image">Device image:</string>
    <string name="idle">idle</string>
    <string name="btn_txt_confirm">Confirm</string>
    <string name="discovering_services">Discovering Services</string>
    <string name="oad_dialog_old_fw_0_89_cc26xx">Firmware version 0.89 detected, to upgrade to latest firmware we will need to upgrade in two stages, first stage to v0.91 and second stage to v1.01</string>
    <string name="oad_dialog_programming_finished">Firmware upgrade finished, the device should now disconnect, this will be evident by the device restarting and LED start blinking again. \r\n\r\nIf this should not happen, upgrade failed, you should try to upgrade again.</string>

    <!-- Progress alertview -->
    <string name="progress_title">Discovering Services</string>
    <string name="progress_info">Discovered x of x services</string>
    <string name="oad_dialog_title">OAD Programming</string>
    <string name="oad_dialog_progress">0.0%</string>
    <string name="oad_file_select_button">Browse</string>
    <string name="cloud_config_dialog_title">Cloud Configuration</string>
    <string name="cloud_config_dialog_cloud_service">Cloud service :</string>
    <string name="cloud_config_dialog_username">Username :</string>
    <string name="cloud_config_dialog_password">Password :</string>
    <string name="cloud_config_dialog_device_id">Device id:</string>
    <string name="cloud_config_dialog_cloud_broker_address">Broker Address :</string>
    <string name="cloud_config_dialog_broker_port">Broker Port :</string>
    <string name="cloud_config_dialog_publish_topic">Publish Topic :</string>
    <string name="cloud_config_dialog_clean_session_checkbox_title">Clean session</string>
    <string name="cloud_config_dialog_use_ssl_checkbox_title">Use SSL</string>
    <string name="cloud_config_dialog_save_button_text">Save settings</string>
    <string-array name="cloud_config_dialog_cloud_services_array">
        <item>IBM IoT Quick Start</item>
        <item>IBM IoT Foundation</item>
        <item>Custom</item>
    </string-array>
</resources>
