<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:paddingTop="10dp"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/oad_dialog_title"
        android:id="@+id/textView"
        android:layout_weight="0.09"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/oad_dialog_progress"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/oad_file_select_button"
        android:id="@+id/oad_browse_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />
</LinearLayout>